--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "portfolio",
   "private": true,
+  "homepage": "https://Sunny-008.github.io/Portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@fontsource/outfit": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
